添加模块化配置文件